--- a/public/src/css/app.css
+++ b/public/src/css/app.css
@@ -15,3 +15,13 @@
 .description {
   color: #7f7f7f;
 }
+
+.hidden {
+  display: none;
+}
+
+.spinner-border {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
